--- a/molenapplicatie.client/src/app/loader/loader.component.html
+++ b/molenapplicatie.client/src/app/loader/loader.component.html
@@ -1,3 +1,3 @@
-<div class="loader-container {{isLoadingVisible ? 'loadingVisible' : 'loadingNotVisible'}}">
+<div *ngIf="isLoading" class="loader-container {{isLoadingVisible ? 'loadingVisible' : 'loadingNotVisible'}}">
   <div class="loader"></div>
 </div>
