--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,35 +1,5 @@
-<!--<app-loader class="loading {{isLoadingVisible ? 'loadingVisible' : 'loadingNotVisible'}}" *ngIf="status == InitializeDataStatus.Initial || isLoading"></app-loader>-->
 <app-loader [isLoadingVisible]="isLoadingVisible"></app-loader>
 
-<header *ngIf="!error">
-  <div class="{{visible ? 'responsive' : ''}} topInfo" id="mytopInfo">
-    <section class="logo-div">
-      <img class="logo" src="Assets/Background/Buurman-Buurman-logo.webp" alt="Alternate Text" />
-      <span>Molens</span>
-    </section>
-    <div *ngIf="visible" class="placeSearch">
-      <app-dropdown [(selectedPlace)]="selectedPlace" (selectedPlaceChange)="onPlaceChange($event)"></app-dropdown>
-    </div>
-    <div *ngIf="visible" class="topButton" (click)="updateMolens()">Update molens</div>
-    <div *ngIf="visible" class="topButton" (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
-    <img class="buurmanEnBuurmanImg" src="Assets/Background/Buurman-Buurman-events.png" alt="Alternate Text" />
-    <div class="icon" (click)="openInfoMenu()">
-      <i class="fa fa-bars"></i>
-    </div>
-  </div>
-</header>
-<div *ngIf="!error" class="container">
-  <div class="allButtons">
-    <h2>Menu</h2>
-    <div class="placeSearch">
-      <app-dropdown [(selectedPlace)]="selectedPlace" (selectedPlaceChange)="onPlaceChange($event)"></app-dropdown>
-    </div>
-    <div class="topButton" (click)="updateMolens()">Update molens</div>
-    <div class="topButton" (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
-  </div>
-  <div class="mapContainer">
-    <app-map [(map)]="map" [(error)]="error" [(status)]="status"></app-map>
-  </div>
-</div>
+<router-outlet></router-outlet>
 
 <app-error-message *ngIf="error">app-error-message</app-error-message>
