--- a/molenapplicatie.client/src/app/image-dialog/image-dialog.component.scss
+++ b/molenapplicatie.client/src/app/image-dialog/image-dialog.component.scss
@@ -27,6 +27,14 @@
   flex-direction: column;
 }
 
+.date-taken {
+  text-align: center;
+  padding:10px 0 10px 0;
+  background-color: #1f1f1f;
+  color: white;
+  border-radius: 0 0 30px 0;
+}
+
 .deleteButtoDisabled {
   padding: 7px 13px;
   border: none;
@@ -67,12 +75,16 @@
   background-color: RoyalBlue;
 }
 
+.remove-round-border {
+  border-radius: 0;
+}
+
 .container-close-btn {
   margin-left: 50px;
 }
 
 .gif{
-    margin-top:10vh;
+    margin-top:5vh;
 }
 
 @media only screen and (max-width: $Media_width) {
