--- a/molenapplicatie.client/src/app/image-selector/image-selector.component.scss
+++ b/molenapplicatie.client/src/app/image-selector/image-selector.component.scss
@@ -5,7 +5,6 @@
 }
 
 .main-image {
-  margin-bottom: 16px;
   height:72vh;
 }
 
@@ -36,8 +35,18 @@
   transition: transform 0.3s;
 }
 
+.more-margin-underneath {
+  margin-bottom: 3.5em;
+}
+
+.date-taken {
+  line-height: 1.5;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
 .thumbnail img {
-  width: 30px;
+  width: 28px;
   height: auto;
   border: 2px solid transparent;
 }
