--- a/molenapplicatie.client/src/app/map/map.component.html
+++ b/molenapplicatie.client/src/app/map/map.component.html
@@ -1,3 +1,4 @@
 <section class="MapComponent">
-  <div id="map"></div>
+  <div [id]="mapId" class="map"></div>
 </section>
+<router-outlet></router-outlet>
